@@ -214,7 +214,8 @@ get_action( const gchar *id )
 	action = NULL;
 
 	pivot = na_pivot_new();
-	na_pivot_load_items( pivot, !PIVOT_LOAD_DISABLED & !PIVOT_LOAD_INVALID );
+	na_pivot_set_loadable( pivot, !PIVOT_LOAD_DISABLED & !PIVOT_LOAD_INVALID );
+	na_pivot_load_items( pivot );
 
 	action = ( NAObjectAction * ) na_pivot_get_item( pivot, id );
 
